--- a/css/style.css
+++ b/css/style.css
@@ -266,11 +266,12 @@ h2.titulo-post {
 }
 .news-destaque {
     position: absolute;
-    bottom: 20px;
+    bottom: 5px;
     left: 5%;
     z-index: 99;
-    padding-right: 5%;
+    padding: 5px;
     font-family: 'Roboto', sans-serif;
+    right: 5%;
 }
 
 .news-destaque {
