--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,14 @@ h2.titulo-post {
     line-height: 1.6rem;
 }
 
+.news-recente {
+    padding: 5px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.1rem;
+}
+
 .news2 {
     padding: 15px;
     font-family: 'Oswald', sans-serif;
