--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* @import url('https://fonts.googleapis.com/css?family=Anton|Oswald:500|Raleway'); */
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Anton|Raleway');
 
 
 /* Smartphones (portrait and landscape) ----------- */
